--- a/kumuluzee-lib-archetype/pom.xml
+++ b/kumuluzee-lib-archetype/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>codes.mydna.archetype</groupId>
     <artifactId>lib</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>maven-archetype</packaging>
 
     <build>
