Improved README, added lib module and some mappers

--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/business-logic/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/business-logic/pom.xml
@@ -19,6 +19,10 @@
             <groupId>${groupId}</groupId>
             <artifactId>entities</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${groupId}</groupId>
+            <artifactId>${artifactId}-lib</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
