--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
@@ -97,6 +97,13 @@
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
             </dependency>
+
+            <!-- Organization dependencies -->
+            <dependency>
+                <groupId>codes.mydna</groupId>
+                <artifactId>rest-lib</artifactId>
+                <version>${rest-lib.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -107,10 +114,49 @@
         </repository>
     </repositories>
 
-    <modules>
-        <module>api</module>
-        <module>business-logic</module>
-        <module>entities</module>
-    </modules>
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>api</module>
+                <module>business-logic</module>
+                <module>entities</module>
+                <module>lib</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>lib</id>
+            <modules>
+                <module>lib</module>
+            </modules>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>mydnacodes-snapshots</id>
+                    <url>https://nexus.din-cloud.com/repository/maven-mydnacodes-snapshots</url>
+                </snapshotRepository>
+                <repository>
+                    <id>mydnacodes-releases</id>
+                    <url>https://nexus.din-cloud.com/repository/maven-mydnacodes-releases</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+                <inherited>false</inherited>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
