--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/business-logic/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/business-logic/pom.xml
@@ -48,6 +48,11 @@
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-json-b-yasson</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>codes.mydna</groupId>
+            <artifactId>rest-lib</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
