--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
@@ -26,6 +26,9 @@
 
         <!-- PostgreSQL-->
         <postgresql.version>42.2.18</postgresql.version>
+
+        <!-- mydnacodes -->
+        <mydnacodes-rest-lib.version>1.0.0-SNAPSHOT</mydnacodes-rest-lib.version>
     </properties>
 
     <dependencyManagement>
@@ -39,6 +42,11 @@
             <dependency>
                 <groupId>${groupId}</groupId>
                 <artifactId>entities</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${groupId}</groupId>
+                <artifactId>${artifactId}-lib</artifactId>
                 <version>${version}</version>
             </dependency>
 
@@ -98,11 +106,11 @@
                 <version>${postgresql.version}</version>
             </dependency>
 
-            <!-- Organization dependencies -->
+            <!-- mydnacodes -->
             <dependency>
                 <groupId>codes.mydna</groupId>
                 <artifactId>rest-lib</artifactId>
-                <version>${rest-lib.version}</version>
+                <version>${mydnacodes-rest-lib.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
