Formatted Slack message and fixed dynamic environment deployment

--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
@@ -77,6 +77,7 @@ pipeline {
                 script {
                     def deploymentConfig = readYaml file: ".ci/deployment-config.yaml"
                     def environment      = ""
+                    def envSuffix        = ""
 
                     if (env.GIT_BRANCH.equals("prod") || env.GIT_BRANCH.equals("origin/prod")) {
                         environment = deploymentConfig.environments.prod
@@ -87,7 +88,9 @@ pipeline {
                     sh """ \
                     sed -e 's+{{IMAGE_NAME}}+$DOCKER_IMAGE_TAG:$DOCKER_IMAGE_VERSION+g' \
                         -e 's+{{SERVICE_PORT}}+$environment.servicePort+g' \
+                        -e 's+{{DATABASE_PORT}}+$environment.dbPort+g' \
                         -e 's+{{NAMESPACE}}+$environment.namespace+g' \
+                        -e 's+{{ENV_SUFFIX}}+$envSuffix+g' \
                         .kube/${artifactId}.yaml > .kube/${artifactId}.tmp
                     """
                     sh "mv -f .kube/${artifactId}.tmp .kube/${artifactId}.yaml"
@@ -113,19 +116,19 @@ pipeline {
     post {
         success {
             slackSend (color: '#57BA57',
-                       message: """[<${env.BUILD_URL}|Build ${env.BUILD_NUMBER}>] *SUCCESSFUL*\n\n \
-                                  |Job: *${env.JOB_NAME}*\n\n \
-                                  |Branch: ${GIT_BRANCH}\n \
-                                  |Author: ${COMMIT_AUTHOR}\n \
+                       message: """[<${env.BUILD_URL}|Build ${env.BUILD_NUMBER}>] *SUCCESSFUL*\n
+                                  |Job: *${env.JOB_NAME}*\n
+                                  |Branch: ${GIT_BRANCH}
+                                  |Author: ${COMMIT_AUTHOR}
                                   |Message: ${COMMIT_MESSAGE}""".stripMargin()
             )
         }
         failure {
             slackSend (color: '#BD0808',
-                       message: """[<${env.BUILD_URL}|Build ${env.BUILD_NUMBER}>] *FAILED*\n\n \
-                                  |Job: *${env.JOB_NAME}*\n\n \
-                                  |Branch: ${GIT_BRANCH}\n \
-                                  |Author: ${COMMIT_AUTHOR}\n \
+                       message: """[<${env.BUILD_URL}|Build ${env.BUILD_NUMBER}>] *FAILED*\n
+                                  |Job: *${env.JOB_NAME}*\n
+                                  |Branch: ${GIT_BRANCH}
+                                  |Author: ${COMMIT_AUTHOR}
                                   |Message: ${COMMIT_MESSAGE}""".stripMargin()
             )
         }
