Missing env suffix

--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
@@ -83,6 +83,7 @@ pipeline {
                         environment = deploymentConfig.environments.prod
                     } else {
                         environment = deploymentConfig.environments.dev
+                        envSuffix   = "-test"
                     }
 
                     sh """ \
