Improved kubernetes deployments

--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
@@ -77,28 +77,23 @@ pipeline {
                 script {
                     def deploymentConfig = readYaml file: ".ci/deployment-config.yaml"
                     def environment      = ""
-                    def envSuffix        = ""
 
                     if (env.GIT_BRANCH.equals("prod") || env.GIT_BRANCH.equals("origin/prod")) {
                         environment = deploymentConfig.environments.prod
                     } else {
                         environment = deploymentConfig.environments.dev
-                        envSuffix   = "-test"
                     }
 
                     sh """ \
                     sed -e 's+{{IMAGE_NAME}}+$DOCKER_IMAGE_TAG:$DOCKER_IMAGE_VERSION+g' \
-                        -e 's+{{SERVICE_PORT}}+$environment.servicePort+g' \
-                        -e 's+{{DATABASE_PORT}}+$environment.dbPort+g' \
                         -e 's+{{NAMESPACE}}+$environment.namespace+g' \
-                        -e 's+{{ENV_SUFFIX}}+$envSuffix+g' \
+                        -e 's+{{ENV_SUFFIX}}+$environment.suffix+g' \
                         .kube/${artifactId}.yaml > .kube/${artifactId}.tmp
                     """
                     sh "mv -f .kube/${artifactId}.tmp .kube/${artifactId}.yaml"
 
                     sh """ \
-                    sed -e 's+{{DATABASE_PORT}}+$environment.dbPort+g' \
-                        -e 's+{{NAMESPACE}}+$environment.namespace+g' \
+                    sed -e 's+{{NAMESPACE}}+$environment.namespace+g' \
                         .kube/${artifactId}-db.yaml > .kube/${artifactId}-db.tmp
                     """
                     sh "mv -f .kube/${artifactId}-db.tmp .kube/${artifactId}-db.yaml"
