--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/Jenkinsfile
@@ -88,6 +88,8 @@ pipeline {
                     sed -e 's+{{IMAGE_NAME}}+$DOCKER_IMAGE_TAG:$DOCKER_IMAGE_VERSION+g' \
                         -e 's+{{NAMESPACE}}+$environment.namespace+g' \
                         -e 's+{{ENV_SUFFIX}}+$environment.suffix+g' \
+                        -e 's+{{ENV_NAME}}+$environment.name+g' \
+                        -e 's+{{ENV_PROD}}+$environment.prod+g' \
                         .kube/${artifactId}.yaml > .kube/${artifactId}.tmp
                     """
                     sh "mv -f .kube/${artifactId}.tmp .kube/${artifactId}.yaml"
