--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/api/src/main/resources/config.yml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/api/src/main/resources/config.yml
@@ -1,6 +1,9 @@
 kumuluzee:
   name: ${artifactId}
   version: ${version}
+  dev:
+    scan-libraries:
+      - rest-lib
   env:
     prod: false
     name: dev
@@ -14,8 +17,9 @@ kumuluzee:
       allow-origin: "*"
       supported-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS, HEAD"
       exposed-headers: "X-Total-Count"
-  openapi:
+  openapi-mp:
     enabled: true
+    servers: http://localhost:8080
     ui:
       enabled: true
   health:
