--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
@@ -17,9 +17,10 @@
 
         <!-- KumuluzEE -->
         <kumuluzee.version>3.11.0</kumuluzee.version>
+        <kumuluzee-config-mp.version>1.4.1</kumuluzee-config-mp.version>
         <kumuluzee-rest-core.version>1.3.2</kumuluzee-rest-core.version>
         <kumuluzee-rest-client.version>1.4.1.2</kumuluzee-rest-client.version>
-        <kumuluzee-openapi.version>1.0.1</kumuluzee-openapi.version>
+        <kumuluzee-openapi-mp.version>1.4.0</kumuluzee-openapi-mp.version>
         <kumuluzee-cors.version>1.0.6</kumuluzee-cors.version>
         <kumuluzee-security.version>1.2.0</kumuluzee-security.version>
         <kumuluzee-health.version>2.3.0</kumuluzee-health.version>
@@ -28,7 +29,7 @@
         <postgresql.version>42.2.18</postgresql.version>
 
         <!-- mydnacodes -->
-        <mydnacodes-rest-lib.version>1.0.0-SNAPSHOT</mydnacodes-rest-lib.version>
+        <mydnacodes-rest-lib.version>1.0.2-SNAPSHOT</mydnacodes-rest-lib.version>
     </properties>
 
     <dependencyManagement>
@@ -57,6 +58,13 @@
                 <version>${kumuluzee.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- KumuluzEE (MicroProfile) -->
+            <dependency>
+                <groupId>com.kumuluz.ee.config</groupId>
+                <artifactId>kumuluzee-config-mp</artifactId>
+                <version>${kumuluzee-config-mp.version}</version>
             </dependency>
 
             <!-- KumuluzEE (Health checks) -->
@@ -90,13 +98,13 @@
             <!-- OAS (Open API Specification) -->
             <dependency>
                 <groupId>com.kumuluz.ee.openapi</groupId>
-                <artifactId>kumuluzee-openapi</artifactId>
-                <version>${kumuluzee-openapi.version}</version>
+                <artifactId>kumuluzee-openapi-mp</artifactId>
+                <version>${kumuluzee-openapi-mp.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.kumuluz.ee.openapi</groupId>
-                <artifactId>kumuluzee-openapi-ui</artifactId>
-                <version>${kumuluzee-openapi.version}</version>
+                <artifactId>kumuluzee-openapi-mp-ui</artifactId>
+                <version>${kumuluzee-openapi-mp.version}</version>
             </dependency>
 
             <!-- PostreSQL -->
