--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/api/src/main/resources/config.yml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/api/src/main/resources/config.yml
@@ -3,6 +3,7 @@ kumuluzee:
   version: ${version}
   dev:
     scan-libraries:
+      - ${artifactId}-lib
       - rest-lib
   env:
     prod: false
@@ -21,6 +22,7 @@ kumuluzee:
     enabled: true
     servers: http://localhost:8080
     ui:
+      mapping: /openapi/ui
       enabled: true
   health:
     servlet:
