--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/pom.xml
@@ -95,7 +95,7 @@
                 <version>${kumuluzee-cors.version}</version>
             </dependency>
 
-            <!-- OAS (Open API Specification) -->
+            <!-- KumuluzEE (OAS - MicroProfile Open API Specification) -->
             <dependency>
                 <groupId>com.kumuluz.ee.openapi</groupId>
                 <artifactId>kumuluzee-openapi-mp</artifactId>
