Closes #4; Added liquibase migration and minor fixes

--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/api/src/main/resources/config.yml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/api/src/main/resources/config.yml
@@ -17,7 +17,7 @@ kumuluzee:
     servlet:
       allow-origin: "*"
       supported-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS, HEAD"
-      exposed-headers: "X-Total-Count"
+      exposed-headers: "X-Total-Count, Content-Type"
   openapi-mp:
     enabled: true
     servers: http://localhost:8080
@@ -42,3 +42,12 @@ kumuluzee:
       password: postgres
       pool:
         max-size: 20
+  migrations:
+    enabled: true
+    liquibase:
+      changelogs:
+        - jndi-name: jdbc/${artifactId}-db
+          file: db/db.changelog-master.xml
+          startup:
+            drop-all: false
+            update: true
