--- a/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/entities/pom.xml
+++ b/kumuluzee-rest-service-archetype/src/main/resources/archetype-resources/entities/pom.xml
@@ -9,9 +9,9 @@
         <version>${version}</version>
     </parent>
 
-    <artifactId>entities</artifactId>
+    <artifactId>${artifactId}-entities</artifactId>
 
-    <name>entities</name>
+    <name>${artifactId}-entities</name>
 
     <dependencies>
         <dependency>
@@ -33,7 +33,7 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.0.0</version>
+                <version>${liquibase.version}</version>
                 <configuration>
                     <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
                     <changeLogFile>src/main/resources/db/db.changelog-master.xml</changeLogFile>
